hydroflow/tests/compile-fail/surface_demux_port_extra.stderr
error: Argument specifying the output ports in `demux(..)` does not contain extra port `d`: ($DIR/tests/compile-fail/surface_demux_port_extra.rs:16:18) (1/2).
 --> tests/compile-fail/surface_demux_port_extra.rs:6:55
  |
6 |         my_demux = source_iter(0..10) -> demux(|item, tl!(a, b, c)| {
  |                                                       ^^^^^^^^^^^^

error: Port `d` not found in the arguments specified in `demux(..)`'s closure: ($DIR/tests/compile-fail/surface_demux_port_extra.rs:6:55) (2/2).
  --> tests/compile-fail/surface_demux_port_extra.rs:16:18
   |
16 |         my_demux[d] -> for_each(std::mem::drop);
   |                  ^

warning: unused import: `hydroflow::pusherator::Pusherator`
 --> tests/compile-fail/surface_demux_port_extra.rs:1:5
  |
1 | use hydroflow::pusherator::Pusherator;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `tl`
 --> tests/compile-fail/surface_demux_port_extra.rs:2:35
  |
2 | use hydroflow::{hydroflow_syntax, tl};
  |                                   ^^
